@@ -1,3 +1,8 @@
+2008-04-21  Martin Lambers <marlam@marlam.de>
+
+	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
+	four channels.
+
 2008-04-19  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl_frame.c: Explicitly convert the frame in
